# pyipums

./: .gitignore  Latino-Americans-ACS.ipynb  Latino-Americans.ipynb  README.md  demo.ipynb  demo.py  pyproject.toml  pypums.py  setup.py  usa_00003.cbk.txt  usa_00003.xml  utils.py
.github/workflows/: coverage.yaml  pytest.yaml
github/workflows/: coverage.yaml
src/pyipums/: clean_data.py  parse_xml.py
src/pypums/: parse_xml.py
tests/: metadata_acs.xml  metadata_cps.xml  metadata_example.xml  test_clean_data.py  test_parse_xml.py
