[tool.poetry]
name = "pyipums"
version = "0.0.4"
description = "A Python package to explore IPUMS data."
readme = "README.md"
authors = ["Francisco Javier Arceo <franciscojavierarceo@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
ipumspy = "^0.3.0"
pandas = "1.5.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/franciscojavierarceo/pypums"
"Bug Tracker" = "https://github.com/franciscojavierarceo/pypums/issues"
