[tool.poetry]
name = "pyipums"
version = "0.0.4"
description = "A Python package to explore IPUMS data."
readme = "README.md"
authors = ["Francisco Javier Arceo <franciscojavierarceo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/franciscojavierarceo/pypums"
repository = "https://github.com/franciscojavierarceo/pypums"
keywords = ["ipums", "census"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
ipumspy = "^0.3.0"
pandas = "1.5.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.project.urls]
"Bug Tracker" = "https://github.com/franciscojavierarceo/pypums/issues"
